--- a/client/public/index.html
+++ b/client/public/index.html
@@ -31,7 +31,7 @@
         padding-top: 3rem;
         padding-bottom: 3rem;
         margin-bottom: 0;
-        background-color: rgb(209, 95, 95);
+        background-color: hsl(0, 61%, 68%);
       }
       @media (min-width: 768px) {
         .jumbotron {
